--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,5 @@
-<!--<a class="flex-0 bg-blue-600 text-white py-1 px-2 rounded mr-4" routerLink="">-->
-<!--  Home-->
-<!--</a>-->
-<!--<a-->
-<!--  class="flex-0 bg-blue-600 text-white py-1 px-2 rounded mr-4"-->
-<!--  routerLink="admin"-->
-<!--&gt;-->
-<!--  Admin-->
-<!--</a>-->
+<!-- TODO: uncomment -->
+<!--<a class="flex-0 bg-blue-600 text-white py-1 px-2 rounded mr-4" routerLink="">Home</a>-->
+<!--<a class="flex-0 bg-blue-600 text-white py-1 px-2 rounded mr-4" routerLink="admin">Admin</a>-->
 <!--<hr class="my-4" />-->
 <router-outlet></router-outlet>
