--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,6 +1,4 @@
-<div
-  class="rounded-lg bg-white shadow mb-2 p-3 flex flex-row gap-3 items-center"
->
+<div class="rounded-lg bg-white shadow mb-2 p-3 flex flex-row gap-3 items-center">
   <div class="flex-1">
     <p class="font-serif font-light italic text-lg" data-test="book-title">
       {{ book.volumeInfo.title }}
