--- a/src/app/book-collection/book-collection.component.html
+++ b/src/app/book-collection/book-collection.component.html
@@ -1,8 +1,3 @@
 <app-book *ngFor="let book of books" [book]="book">
-  <button
-    class="bg-red-700 text-white py-1 px-2 rounded"
-    (click)="remove.emit(book)"
-  >
-    Remove
-  </button>
+  <button class="bg-red-700 text-white py-1 px-2 rounded" (click)="remove.emit(book)">Remove</button>
 </app-book>
