--- a/src/app/book-list/book-list.component.html
+++ b/src/app/book-list/book-list.component.html
@@ -1,8 +1,3 @@
 <app-book *ngFor="let book of books" [book]="book">
-  <button
-    class="bg-blue-600 text-white py-1 px-2 rounded"
-    (click)="add.emit(book)"
-  >
-    Add to Collection
-  </button>
+  <button class="bg-blue-600 text-white py-1 px-2 rounded" (click)="add.emit(book)">Add to Collection</button>
 </app-book>
