--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,7 +6,10 @@
   <div class="flex flex-col flex-1">
     <h2 class="text-xl font-semibold pb-2">Books</h2>
     <!-- TODO: add loader when books are being retrieved from API -->
-    <app-book-list class="book-list" [books]="(books$ | async)!" (add)="onAdd($event)"></app-book-list>
+    <p *ngIf="isLoading$ | async; else booksList">Loading...</p>
+    <ng-template #booksList>
+      <app-book-list class="book-list" [books]="(books$ | async)!" (add)="onAdd($event)"></app-book-list>
+    </ng-template>
   </div>
 
   <div class="flex flex-col flex-1">
